# ChangeLog for sys-apps/schedutils
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/schedutils/Attic/ChangeLog,v 1.6 2003/04/12 14:41:19 lostlogic Exp $

*schedutils-1.1.0 (12 Apr 2003)

  12 Apr 2003; Brandon Low <lostlogic@gentoo.org> Manifest,
  schedutils-1.1.0.ebuild:
  Bump to latest from RML

*schedutils-0.0.5 (02 Jun 2002)

  21 Jul 2002; Mark Guertin <gerk@gentoo.org>:
  updated keywords (-ppc)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> schedutils-0.0.5.ebuild :
  Added KEYWORDS.

  02 Jun 2002; Paul Thompson <thompson@pobox.com>

  Robert Love just announced on l-k this little suite of
  utils for manipulating schedular parameters, so here is
  an ebuild.