@@ -1,3 +1,3 @@
-MD5 969017556fa281a065abfec549a31c0d schedutils-1.1.0.ebuild 607
-MD5 8957c2036079e3f72ac9154b3074aac4 ChangeLog 746
+MD5 a030fe59e495f889983512ff6f3555e4 schedutils-1.1.0.ebuild 813
+MD5 0a4fce086a09b31246a94903428aecaa ChangeLog 897
 MD5 7ce90b742fe703f126a6ff2ce9d656fb files/digest-schedutils-1.1.0 67
