@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/schedutils/Attic/schedutils-1.1.0.ebuild,v 1.3 2003/04/12 14:43:22 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/schedutils/Attic/schedutils-1.1.0.ebuild,v 1.4 2003/04/12 14:54:23 lostlogic Exp $
 
 DESCRIPTION="Utilities for manipulating kernel schedular parameters"
 HOMEPAGE="http://tech9.net/rml/schedutils"
@@ -14,10 +14,19 @@ SLOT="0"
 SRC_URI="http://tech9.net/rml/${PN}/${P}.tar.gz"
 S=${WORKDIR}/${P}
 
+src_unpack() {
+	unpack ${A}
+	cd ${S}
+	sed -ie 's:\(#include <features.h>\):\1\n#include <errno.h>:' taskset.c
+}
+
 src_compile() {
-	emake || die "Make failed"
+	emake PREFIX=/usr || die "Make failed"
 }
 
 src_install() {
-	einstall || die "Install failed"
+	dodir /usr/bin
+	dodir /usr/share/man/man1
+	dodir /usr/share/doc
+	einstall PREFIX=${D}/usr || die "Install failed"
 }
